replaced stratio/spark-mongodb by mongodb/mongo-spark